Fix Menu z-index

--- a/src/components/Console/Menu/Menu.module.css
+++ b/src/components/Console/Menu/Menu.module.css
@@ -12,7 +12,7 @@
     top: 0;
     left: 0;
     padding: 0.5rem;
-    z-index: 5;
+    z-index: 50;
 }
 
 .menu::before {
